--- a/package.json
+++ b/package.json
@@ -70,10 +70,12 @@
   },
   "license": "MIT",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.5",
     "crocks": "^0.12.4",
     "immutable": "^4.0.0-rc.12",
     "immutable-ext": "^1.1.5",
     "mongodb": "^3.6.3",
+    "node-fetch": "^2.6.1",
     "ramda": "^0.27.1"
   }
 }
