--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "husky": "^3.0.9",
     "jest": "^26.6.3",
+    "jest-extended": "^0.11.5",
     "lint-staged": "^9.4.3",
     "prettier": "^1.19.1"
   },
@@ -68,7 +69,8 @@
   },
   "repository": "madoos/home-scrapper",
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": ["jest-extended"]
   },
   "license": "MIT",
   "dependencies": {
